The Control and AI Quartz jobs are initiated by Quartz need to have their own Session since the owning session will be closed when the Jobs are started asyncronously. [HQ-876]